@@ -1,4 +1,4 @@
-$Id: THANKS,v 1.77 2003/02/11 12:43:44 stelian Exp $
+$Id: THANKS,v 1.78 2003/03/07 09:15:46 stelian Exp $
 
 Dump and restore were written by the people of the CSRG at the University
 of California, Berkeley.
@@ -21,6 +21,7 @@ Thanks to people who reported problems with the port, sent patches, and
 suggested various improvements.
 Here is a partial list of them (if I have forgotten someone, please complain):
 John Adams		johna@onevista.com
+Jin-su Ahn		jsahn@ee.snu.ac.kr
 Eros Albertazzi		eros@lamel.bo.cnr.it
 Matthias Andree		matthias.andree@stud.uni-dortmund.de
 Andrea Arcangeli	andrea@suse.de
